Simulator (#82)
* WIP: Merging Ecdar 2.2 simulator into main

* WIP: Compiling system with functionalities from Main working (simulator still not working, but presentation can be displayed)

* WIP: Design updated for simulator and side panes logic/naming updated to account for having either the editor or the simulator view active

* WIP: ProtoBuf messages updated and implementation of these into the GUI started

* Minor clean up

* WIP: Spacing for trace and transition headers added

* WIP: BackendDriver usage for simulation started

* WIP: Components can be shown within the simulator

* ProtoBuf messages updated and no longer used messages commented out of implementation

* TestFX added and protos updated

* JUnit5 upgrade

* Comment updated in preparation for query implementation in simulator view

* WIP: Toggle for GUI mode added (sizing of toggle not working)

* WIP: Dialog for initializing simulation added

* Show tooltip when query was unsuccessful

* replacement af >= <= med deres unicode

* Modify getter of query, such that it complies with the backend expected format

* Refinement symbol replaced with unicode in dropdown

* fix typo

* unittest af getQuery();

* changeRefinementSymbols added to display >= and <= correctly

* refactoring

* ikke længere i en funktion men direkte i changelistener

* to static metoder på query.java til at replace refinement og unicode -> sorry man kunne godt lave en static metode

* Update QueryPresentation.fxml

* center query icons

* When ENTER is pressed, we check if a query type has been selected before running query.

* Simulator (#35)

Fundament fra Niels

* WIP: ''Fix'' to allow for compilation

* align with condition for disabling action button

* Hide generated component tab if there are no generated components (#31)

* Nail location on all zoom levels not working FIXED

* Print statement removed

* if statement der sætter visible til true eller fals