@@ -11,6 +11,20 @@ javafx {
     modules = ['javafx.controls', 'javafx.fxml', 'javafx.swing']
 }
 
+run {
+    mainClassName = 'com.jfxbase/com.jfxbase.sample.Main'
+    applicationDefaultJvmArgs += [
+            "--add-opens", "javafx.graphics/javafx.css=ALL-UNNAMED",
+            "--add-opens", "javafx.base/com.sun.javafx.runtime=ALL-UNNAMED",
+            "--add-opens", "javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
+            "--add-opens", "javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
+            "--add-opens", "javafx.base/com.sun.javafx.binding=ALL-UNNAMED",
+            "--add-opens", "javafx.base/com.sun.javafx.event=ALL-UNNAMED",
+            "--add-opens", "javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
+            "--add-opens", "javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
+    ]
+}
+
 group 'ecdar'
 if (project.hasProperty('ecdarVersion')) {
     version = project.ecdarVersion
@@ -47,7 +61,6 @@ def protocVersion = protobufVersion
 
 dependencies {
     implementation fileTree(dir: 'lib', include: ['*.jar'])
-
     implementation 'com.jfoenix:jfoenix:9.0.10'
     implementation group: 'de.codecentric.centerdevice', name: 'javafxsvg', version: '1.3.0'
     implementation 'org.kordamp.ikonli:ikonli-core:12.3.1'
@@ -76,13 +89,13 @@ dependencies {
     testImplementation "io.grpc:grpc-testing:${grpcVersion}"
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.0.0-M4'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
     testImplementation 'org.testfx:testfx-junit:4.0.15-alpha'
     testImplementation 'org.testfx:openjfx-monocle:jdk-12.0.1+2'
     testImplementation 'org.mockito:mockito-core:3.12.4'
     testImplementation 'org.mockito:mockito-junit-jupiter:4.8.0'
 }
-
 
 test {
     useJUnitPlatform { includeEngines 'junit-jupiter' }
